--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,34 @@
-# Compiled class file
-*.class
 
-# Log file
-*.log
+#The following is the defined listing within CPSD that we do not include in our Source Code Repositories.
+# This list will be updated when new file types are identified that we do not want to contribute to the Version Control System.
 
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
+# Packaged Files and Binaries
 *.jar
 *.war
 *.ear
-*.zip
-*.tar.gz
-*.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+# Log Files and Crash Dumps
+*.log
 hs_err_pid*
+
+# IDE Explicit Files
+.idea
+*.iml
+.settings
+.classpath
+.project
+.directory
+nb-configuration.xml
+nbactions.xml
+
+# Specific Maven Content
+target/
+
+# Java
+*.class
+
+# General Content
+Thumbs.db
+desktop.ini
+*.DS_Store
+*.bak
