Adding example job execution and create job queue

--- a/ngci-bootstrap-webui/src/main/resources/application.properties
+++ b/ngci-bootstrap-webui/src/main/resources/application.properties
@@ -6,26 +6,16 @@
 # Embedded Tomcat startup port
 # Can be overridden by a -Dserver.port as well.
 server.port=8300
-server.context-path=/simple
+server.context-path=/bootstrap
+
+spring.mvc.view.prefix: /WEB-INF/jsp/
+spring.mvc.view.suffix: .jsp
 
 #spring.mvc.view.prefix: /
 #spring.mvc.view.suffix: .jsp
 
 #app.auth-server.host=http://localhost:8100
 
-#security.basic.enable=false
-#security.oauth2.client.client-id=ClientId
-#security.oauth2.client.client-secret=secret
-#security.oauth2.client.access-token-uri=${app.auth-server.host}/oauth/token
-#security.oauth2.client.user-authorization-uri=${app.auth-server.host}/oauth/authorize
-#security.oauth2.resource.user-info-uri=${app.auth-server.host}/security/users/principal
-
-#security.oauth2.resource.jwt.key-uri=${app.auth-server.host}/oauth/token_key
-#security.oauth2.resource.token-info-uri=${app.auth-server.host}/login/oauth/access_token
-
-#security.oauth2.client.token-name=oauth_token
-#security.oauth2.client.authentication-scheme=query
-#security.oauth2.client.client-authentication-scheme=form
 
 
 # See https://github.com/spring-projects/spring-boot/wiki/Spring-Boot-1.5-Release-Notes#oauth-2-resource-filter
@@ -37,9 +27,3 @@ server.context-path=/simple
 logging.level.org.springframework.security=debug
 logging.level.org.springframework.web.client=debug
 logging.level.org.springframework.http.client=debug
-
-#logging.level.sun.net.www.protocol.http.HttpURLConnection=debug
-#logging.level.org.springframework=debug
-#logging.level.*=info
-#logging.level.root=info
-
