--- a/ngci-bootstrap-webui/pom.xml
+++ b/ngci-bootstrap-webui/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>ngci-bootstrap-webui</artifactId>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
 
     <name>NGCI Bootstrap Integration UI</name>
     <description>NGCI Bootstrap Integration UI</description>
@@ -19,48 +19,63 @@
 
 
     <properties>
-        <!-- The project build source encoding property -->
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-
-        <!-- Docker Registry local -->
-        <docker.registry>docker-dev-local.art.local</docker.registry>
-
-        <!-- Maven plugins -->
-        <plugin-maven-compiler-version>3.3</plugin-maven-compiler-version><!-- there is 3.5.1 already -->
-        <plugin-maven-dependency-version>2.10</plugin-maven-dependency-version>
-        <maven-jar-plugin.version>3.0.2</maven-jar-plugin.version>
-
-        <!-- Java version -->
-        <java-version>1.8</java-version>
-
-        <junit.version>4.12</junit.version>
+        <java.version>1.8</java.version>
+        <!--
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        -->
         <spring.boot.version>1.5.3.RELEASE</spring.boot.version>
-        <jackson-core-version>2.8.5</jackson-core-version>
+        <jstl.version>1.2</jstl.version>
+        <tomcat.embed.version>8.5.14</tomcat.embed.version>
         <mockito.version>1.10.19</mockito.version>
+        <junit.version>4.12</junit.version>
     </properties>
 
     <dependencies>
 
-        <!-- Embedded container (Tomcat) support -->
+        <!-- Web -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
             <version>${spring.boot.version}</version>
         </dependency>
-
-         
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>${jackson-core-version}</version>
-        </dependency>
-  
+        
+        <!-- Web with Tomcat + Embed -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+            <scope>provided</scope>
             <version>${spring.boot.version}</version>
-            <scope>test</scope>
+        </dependency>
+
+        <!-- JSTL -->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+            <version>${jstl.version}</version>
+        </dependency>
+
+        <!-- Need this to compile JSP -->
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-jasper</artifactId>
+            <version>${tomcat.embed.version}</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <!-- Need this to compile JSP -->
+        <dependency>
+            <groupId>org.eclipse.jdt.core.compiler</groupId>
+            <artifactId>ecj</artifactId>
+            <version>4.6.1</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <!-- Optional, for bootstrap -->
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>bootstrap</artifactId>
+            <version>3.3.7</version>
         </dependency>
 
         <dependency>
@@ -80,100 +95,30 @@
     
     <build>
         <plugins>
-            <!-- Copy LICENSE file -->
-            <plugin>
-                <artifactId>maven-resources-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>copy-resources</id>
-                        <!-- here the phase you need -->
-                        <phase>validate</phase>
-                        <goals>
-                            <goal>copy-resources</goal>
-                        </goals>
-                        <configuration>
-                            <outputDirectory>${project.build.directory}</outputDirectory>
-                            <resources>          
-                                <resource>
-                                    <filtering>true</filtering>
-                                    <!-- if it is neccessary -->
-                                    <directory>${project.basedir}/..</directory>
-                                    <!-- from (mvn 3.0.4 broke use of ${project.parent.basedir})-->
-                                    <targetPath>${project.build.directory}/classes</targetPath>
-                                    <!-- to -->
-                                    <includes>
-                                        <!-- what -->
-                                        <include>LICENSE.md</include>
-                                    </includes>
-                                </resource>
-                            </resources>              
-                        </configuration>            
-                    </execution>
-                </executions>
-            </plugin>
-
-            <!-- setup lib directory of dependencies -->
+        <!-- -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>copy-dependencies</id>
-                        <phase>prepare-package</phase>
-                        <goals>
-                            <goal>copy-dependencies</goal>
-                        </goals>
-                        <configuration>
-                            <outputDirectory>${project.build.directory}/lib</outputDirectory>
-                            <useSubDirectoryPerScope>false</useSubDirectoryPerScope>
-                            <excludeTransitive>false</excludeTransitive>
-                            <overWriteReleases>false</overWriteReleases>
-                            <overWriteSnapshots>false</overWriteSnapshots>
-                            <overWriteIfNewer>true</overWriteIfNewer>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            
-            <!-- Build Executable jar -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>${maven-jar-plugin.version}</version>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>2.6</version>
                 <configuration>
-                    <archive>
-                        <manifest>
-                            <addClasspath>true</addClasspath>
-                            <classpathPrefix>lib/</classpathPrefix>
-                            <useUniqueVersions>false</useUniqueVersions>
-                        </manifest>
-                        <addMavenDescriptor>false</addMavenDescriptor>
-                        <manifestEntries>
-                            <Bundle-SymbolicName/>
-                            <Bundle-Name/>
-                            <Built-By>Dell EMC Development</Built-By>
-                            <Main-Class>com.dell.cpsd.bootstrap.BootStrapWeb</Main-Class>
-                            <Export-Package/>
-                            <Class-Path>. ${project.artifact.artifactId}-${project.artifact.version}.jar</Class-Path>
-                        </manifestEntries>
-                    </archive>
-                    <includes>
-                        <include>**/*.class</include>
-                        <include>**/banner.txt</include>
-                        <include>**/*.xml</include>
-                        <include>**/*.properties</include>
-                        <include>LICENSE.md</include>
-                        <include>**/webapp/**</include>
-                        <include>**/public/**</include>
-                        <include>**/static/**</include>
-                    </includes>
-                    <!-- -->
-                    <excludes>
-                    </excludes>
+                    <failOnMissingWebXml>false</failOnMissingWebXml>
+                    <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                 </configuration>
             </plugin>
+         <!-- -->
             
-         </plugins>
+            <!-- Package as an executable jar/war -->
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
     </build>
-    
 </project>
