--- a/ngci-bootstrap-webui/pom.xml
+++ b/ngci-bootstrap-webui/pom.xml
@@ -20,9 +20,9 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <!--
-        <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <!--
         -->
         <spring.boot.version>1.5.3.RELEASE</spring.boot.version>
         <jstl.version>1.2</jstl.version>
@@ -48,6 +48,12 @@
             <version>${spring.boot.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.3</version>
+        </dependency>
+        
         <!-- JSTL -->
         <dependency>
             <groupId>javax.servlet</groupId>
