Update context, cleanup resource

--- a/ngci-bootstrap-webui/src/main/resources/application.properties
+++ b/ngci-bootstrap-webui/src/main/resources/application.properties
@@ -6,7 +6,7 @@
 # Embedded Tomcat startup port
 # Can be overridden by a -Dserver.port as well.
 server.port=8400
-server.context-path=/bootstrap
+server.context-path=/
 
 spring.mvc.view.prefix: /WEB-INF/jsp/
 spring.mvc.view.suffix: .jsp
@@ -24,6 +24,6 @@ spring.mvc.view.suffix: .jsp
 # logging
 #logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
 
-logging.level.org.springframework.security=debug
-logging.level.org.springframework.web.client=debug
-logging.level.org.springframework.http.client=debug
+logging.level.org.springframework.security=info
+logging.level.org.springframework.web.client=info
+logging.level.org.springframework.http.client=info
